--- a/views/example.handlebars
+++ b/views/example.handlebars
@@ -3,15 +3,12 @@
     <div class="col-8 offset-2">
       <div class="card mt-4">
         <div class="card-body">
-          <h5 class="card-title">Example</h5>
-          <p>
-            <strong>ID</strong>: {{example.id}}</p>
-          <p>
-          <p>
-            <strong>Text</strong>: {{example.text}}</p>
-          <p>
-            <strong>Description:</strong> {{example.description}}</p>
-            <a href="/">← Back To Home</a>
+          <h5 class="card-title">{{example.title}}</h5>
+          <p>Title: {{example.title}}</p>
+          <p>Year Released: {{example.year}}</p>
+          <p>Rating {{example.rating}}</p>
+          <p>Description {{example.description}}</p>
+            <a href="index.handlebars">← Back To Home</a>
         </div>
       </div>
     </div>
