--- a/views/result.handlebars
+++ b/views/result.handlebars
@@ -1,4 +1,4 @@
- <nav class="navbar navbar-expand-lg navbar-dark bg-dark">
+<nav class="navbar navbar-expand-lg navbar-dark bg-dark">
                 <a class="navbar-brand" href="#">My Movie List</a>
                 <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
                   <span class="navbar-toggler-icon"></span>
@@ -96,7 +96,7 @@
               </div>
         
               <div class="card-deck">
-                <div class="col-sm-3  card bg-primary">
+                <div class="col-sm-3 card bg-primary">
                   <div class="card-body text-center">
                       <p class="card-text">Upcoming Trailer</p>
                       <ul>
@@ -105,62 +105,44 @@
                         {{/each}}
                       </ul> 
                       <div class="embed-responsive embed-responsive-1by1">
-                          
-                      <iframe class="embed-responsive-item" src="https://www.youtube.com/embed/ARyZpzqD6lA?start=42" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+                          <iframe class="embed-responsive-item" src="https://www.youtube.com/embed/ARyZpzqD6lA?start=42" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
                       </div> 
                   </div>
                 </div>
                 <div class="col-sm-6 card bg-warning">
                   <div class="card-body text-center">
-                    <p class="card-text">My list!</p>
-        
-                      <ul>
-                        {{#each movies}}
-                          <li>
-                            <p>
-                              {{this.id}}. {{this.movie}}
-        
-                              <button data-movieid="{{this.id}}" class="delmovie">Delete</button>
-                            </p>
-                          </li>
-                        {{/each}}
-                      </ul> 
-        
-                      <h2>Add a Movie to Watch</h2>
-                      <form id="addmovie" class="button-size">
-                        <textarea type="text" name="movie"></textarea>
-                        <button type="submit">Save Movie!</button>
-                      </form>
-        
-                      <h2>Update a Movie</h2>
-                      <form id="updatemovie" class="button-size">
-                        <input type="text" name="id" placeholder="id">
-                        <textarea type="text" name="movie" placeholder="what do you want to update this movie title to?"></textarea>
-                        <button type="submit">Update Movie!</button>
-                      </form>
-                      
+                    
+                    <div class="card-body text-center">
+                       <div class="card mt-4">
+                          <div class="card-body">
+                            <h5 class="card-title">{{example.title}}</h5>
+                            <p>Title: {{example.title}}</p>
+                            <p>Year Released: {{example.year}}</p>
+                            <p>Rating {{example.rating}}</p>
+                            <p>Description {{example.description}}</p>
+                              <a href="index.handlebars">← Back To Home</a>
+                        </div>
+                      </div>
+                    </div>
+                    
                   </div>
                 </div>
-                {{!-- <div class="card bg-success">
-                  <div class="card-body text-center">
-                    <p class="card-text">Movie News</p>
-                      
-                  </div>
-                </div> --}}
-                <div class="col-sm-3  card bg-danger">
-                  <div class="card-body text-center">
-                    <p class="card-text">Showtimes</p>
-                      <form id="addzipcode" class="button-size">
-                        <textarea type="text" name="zipcode"></textarea>
-                        <button type="submit">Enter Zipcode</button>
-                      </form>
-                      <ul>
+               
+                <div class="col-sm-3 card bg-danger">
+                    <div class="card-body text-center">
+                      <p class="card-text">Showtimes</p>
+                        <form id="addzipcode" class="button-size">
+                          <textarea type="text" name="zipcode"></textarea>
+                          <button type="submit">Enter Zipcode</button>
+                        </form>
+                        <ul>
                         {{#each movies}}
                           
                         {{/each}}
                       </ul> 
+                        
+                    </div>
                   </div>
-                </div> 
               </div>
         
               <div>
@@ -168,13 +150,17 @@
                   <div class="card bg-secondary">
                       <div class="card-body text-center">
                         <p class="card-text">Movie News</p>
+                         <ul>
+                        {{#each news}}
+                          
+                        {{/each}}
+                      </ul> 
                       </div>
                     </div> 
                
               </div>
     <!-- Optional JavaScript -->
     <!-- jQuery first, then Popper.js, then Bootstrap JS -->
-     <script src="./view.js" type="text/javascript"></script>
     <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js" integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo" crossorigin="anonymous"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.3/umd/popper.min.js" integrity="sha384-ZMP7rVo3mIykV+2+9J3UJ46jBk0WLaUAdn689aCwoqbBJiSnjAK/l8WvCWPIPm49" crossorigin="anonymous"></script>
     <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/js/bootstrap.min.js" integrity="sha384-ChfqqxuZUCnJSK3+MXmPNIyE6ZbWh2IMqE241rYiqJxyMiZ6OW/JmZQ5stwEULTy" crossorigin="anonymous"></script>
