--- a/views/index.handlebars
+++ b/views/index.handlebars
@@ -23,7 +23,7 @@
                               <button type="button" class="close" data-dismiss="modal">&times;</button>
                             </div>
                             <div class="modal-body">
-                            <form id="signup" name="signup" method="post" action="api/signup">
+                            <form id="signup" name="signup" method="post" >
                             <label for="email">Email Address</label>
                             <input class="text" name="email" type="email" />
                             <br><label for="firstname">Firstname</label>
