--- a/views/index.handlebars
+++ b/views/index.handlebars
@@ -83,13 +83,12 @@
         
               <div class="jumbotron jumbotron-fluid bg-secondary">
                 <div class="container">
-                  <h1 class="display-4">Current Top 10 Movies</h1>
+                  <h1 class="display-4">Popular Current Movies</h1>
                   <ul>
-                        {{#each posters}}
-                          
-                        {{/each}}
-                      </ul> 
-                  <p class="lead">Pictures of the most popular movies on the currently playing</p>
+                    {{#each posters}}
+                      <img class="poster" src="{{this}}">
+                    {{/each}}
+                  </ul> 
                 </div>
               </div>
         
@@ -102,6 +101,7 @@
                           
                         {{/each}}
                       </ul> 
+
                       <div class="embed-responsive embed-responsive-1by1">
                           
                       <iframe class="embed-responsive-item" src="https://www.youtube.com/embed/ARyZpzqD6lA?start=42" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
@@ -166,8 +166,3 @@
     <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.3/umd/popper.min.js" integrity="sha384-ZMP7rVo3mIykV+2+9J3UJ46jBk0WLaUAdn689aCwoqbBJiSnjAK/l8WvCWPIPm49" crossorigin="anonymous"></script>
     <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/js/bootstrap.min.js" integrity="sha384-ChfqqxuZUCnJSK3+MXmPNIyE6ZbWh2IMqE241rYiqJxyMiZ6OW/JmZQ5stwEULTy" crossorigin="anonymous"></script>
     <script src="./view.js" type="text/javascript"></script>
-    <script>
-      $.get("/api/trending", function(data, status) {
-        console.log(data);
-      });
-    </script>
