--- a/views/index.handlebars
+++ b/views/index.handlebars
@@ -1,181 +1,169 @@
- <nav class="navbar navbar-expand-lg navbar-dark bg-dark">
-                <a class="navbar-brand" href="#">My Movie List</a>
-                <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
-                  <span class="navbar-toggler-icon"></span>
-                </button>
-              
-                <div class="collapse navbar-collapse" id="navbarSupportedContent">
-                  <ul class="navbar-nav mr-auto">
-                    <li class="nav-item active">
-                      <a class="nav-link" href="#">Home <span class="sr-only">(current)</span></a>
-                    </li>
-                    <li class="nav-item">
-                      <!-- <a class="nav-link" href="#">Sign up</a> -->
-                      <button type="button" class="btn btn-success btn" data-toggle="modal" data-target="#myModal">Sign Up</button>
+<nav class="navbar navbar-expand-lg navbar-dark bg-dark">
+  <a class="navbar-brand" href="#">My Movie List</a>
+  <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
+    <span class="navbar-toggler-icon"></span>
+  </button>
 
-                      <!-- Modal -->
-                      <div class="modal fade" id="myModal" role="dialog">
-                        <div class="modal-dialog">
-                        
-                          <!-- Modal content-->
-                          <div class="modal-content">
-                            <div class="modal-header">
-                              <button type="button" class="close" data-dismiss="modal">&times;</button>
-                            </div>
-                            <div class="modal-body">
-                            <form id="signup" name="signup" method="post" >
-                            <label for="email">Email Address</label>
-                            <input class="text" name="email" type="email" />
-                            <br><label for="firstname">Firstname</label>
-                            <input name="firstname" type="text" />
-                            <br><label for="lastname">Lastname</label>
-                            <input name="lastname" type="text" />
-                            <br><label for="password">Password</label>
-                            <input name="password" type="password" />
-                            <br><input id="signupbtn" class="btn btn-info" type="submit" value="Sign Up" />
-                        </form>  
-                            </div>
-                            <div class="modal-footer">
-                              <button type="button" class="btn btn-success btn-default" data-dismiss="modal">Close</button>
-                            </div>
-                          </div>
-                          
-                        </div>
-                      </div>
-                    </li>
-                    <li class="nav-item">
-                        <button type="button" class="btn btn-success btn" data-toggle="modal" data-target="#myModal2">Sign in</button>
+  <div class="collapse navbar-collapse" id="navbarSupportedContent">
+    <ul class="navbar-nav mr-auto">
+      <li class="nav-item">
+        <!-- <a class="nav-link" href="#">Sign up</a> -->
+        <button type="button" class="btn btn-outline-success btn" data-toggle="modal" data-target="#myModal">Sign Up</button>
 
-                        <!-- Modal -->
-                        <div class="modal fade" id="myModal2" role="dialog">
-                          <div class="modal-dialog">
-                          
-                            <!-- Modal content-->
-                            <div class="modal-content">
-                              <div class="modal-header">
-                                <button type="button" class="close" data-dismiss="modal">&times;</button>
-                                
-                              </div>
-                              <div class="modal-body">
-                                <form id="signin" name="signin" method="post" action="signin">
-                              <label for="email">Email Address</label>
-                              <input class="text" name="email" type="text" />
-                              <br><label for="password">Password</label>
-                              <input name="password" type="password" />
-                              <br><input class="btn btn-info" type="submit" value="Sign In" />
-                          </form>
-                              </div>
-                              <div class="modal-footer">
-                                <button type="button" class="btn btn-success btn-default" data-dismiss="modal">Close</button>
-                              </div>
-                            </div>
-                            
-                          </div>
-                        </div>
-                      </li>
-                    
-                  </ul>
-                  <form class="form-inline my-2 my-lg-0">
-                    <input class="form-control mr-sm-2" type="search" placeholder="Search" aria-label="Search">
-                    <button class="btn btn-outline-success my-2 my-sm-0" type="submit">Search</button>
-                  </form>
+        <!-- Modal -->
+        <div class="modal fade" id="myModal" role="dialog">
+          <div class="modal-dialog">
+          
+            <!-- Modal content-->
+            <div class="modal-content">
+              <div class="modal-header">
+                <button type="button" class="close" data-dismiss="modal">&times;</button>
+              </div>
+              <div class="modal-body">
+              <form id="signup" name="signup" method="post" action="api/signup">
+                <label for="email">Email Address</label>
+                <input class="text" name="email" type="email" />
+                <br><label for="firstname">Firstname</label>
+                <input name="firstname" type="text" />
+                <br><label for="lastname">Lastname</label>
+                <input name="lastname" type="text" />
+                <br><label for="password">Password</label>
+                <input name="password" type="password" />
+                <br><input id="signupbtn" class="btn btn-info" type="submit" value="Sign Up" />
+              </form>  
+              </div>
+              <div class="modal-footer">
+                <button type="button" class="btn btn-success btn-default" data-dismiss="modal">Close</button>
+              </div>
+            </div>
+            
+          </div>
+        </div>
+      </li>
+      <li class="nav-item">
+        <button type="button" class="btn btn-outline-success btn" data-toggle="modal" data-target="#myModal2">Sign in</button>
+
+        <!-- Modal -->
+        <div class="modal fade" id="myModal2" role="dialog">
+          <div class="modal-dialog">
+          
+            <!-- Modal content-->
+            <div class="modal-content">
+              <div class="modal-header">
+                <button type="button" class="close" data-dismiss="modal">&times;</button>  
+              </div>
+              <div class="modal-body">
+                <form id="signin" name="signin" method="post" action="signin">
+                  <label for="email">Email Address</label>
+                  <input class="text" name="email" type="text" />
+                  <br><label for="password">Password</label>
+                  <input name="password" type="password" />
+                  <br><input class="btn btn-info" type="submit" value="Sign In" />
+                </form>
+              </div>
+              <div class="modal-footer">
+                <button type="button" class="btn btn-success btn-default" data-dismiss="modal">Close</button>
+              </div>
+            </div>
+            
+          </div>
+        </div>
+      </li>
+      
+    </ul>
+    <form class="form-inline my-2 my-lg-0" action="/api/search" method="POST">
+      <input class="form-control mr-sm-2" name="query" type="search" placeholder="Search" aria-label="Search">
+      <button class="btn btn-outline-success my-2 my-sm-0" type="submit">Search</button>
+    </form>
+  </div>
+</nav>
+<br>
+
+<div class="jumbotron jumbotron-fluid bg-secondary">
+  <div class="container">
+    <h1 class="display-4">Popular Current Movies</h1>
+
+    <div id="demo" class="carousel slide" data-ride="carousel">
+
+      <!-- The slideshow -->
+      <div class="carousel-inner">
+        {{#each posters}}
+          {{#if @first}}
+            <div class="carousel-item active">
+          {{else}}
+            <div class="carousel-item">
+          {{/if}}
+          <img src="{{this}}">
+        </div>
+        {{/each}}
+      </div>
+
+      <!-- Left and right controls -->
+      <a class="carousel-control-prev" href="#demo" data-slide="prev">
+        <span class="carousel-control-prev-icon"></span>
+      </a>
+      <a class="carousel-control-next" href="#demo" data-slide="next">
+        <span class="carousel-control-next-icon"></span>
+      </a>
+
+    </div>
+
+  </div>
+</div>
+
+<div class="card-deck">
+  <div class="col-sm-3  card bg-primary">
+    <div class="card-body text-center">
+      <p class="card-text">Upcoming Trailer</p>
+      <ul>
+        {{#each trailers}}
+          
+        {{/each}}
+      </ul> 
+      <div class="embed-responsive embed-responsive-1by1">
+        {{!-- <iframe class="embed-responsive-item" src="https://www.youtube.com/embed/ARyZpzqD6lA?start=42" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe> --}}
+      </div> 
+    </div>
+  </div>
+  <div class="col-sm-6 card bg-warning">
+    <div class="card-body text-center">
+      <ul class="list-group todo-list">
+        <li class="list-group-item new-item">
+          <form id="todo-form">
+            <div class="container">
+              <div class="row">
+                <div class="col-10">
+                  <input class="new-item form-control" placeholder="Add a movie" type="text" />
                 </div>
-              </nav>
-              <br>
-        
-              <div class="jumbotron jumbotron-fluid bg-secondary">
-                <div class="container">
-                  <h1 class="display-4">Current Top 10 Movies</h1>
-                  <ul>
-                        {{#each posters}}
-                          
-                        {{/each}}
-                      </ul> 
-                  <p class="lead">Pictures of the most popular movies on the currently playing</p>
+                <div class="col-2">
+                  <button type="submit" class="btn-sm btn-success">Add Movie</button>
                 </div>
               </div>
-        
-              <div class="card-deck">
-                <div class="col-sm-3  card bg-primary">
-                  <div class="card-body text-center">
-                      <p class="card-text">Upcoming Trailer</p>
-                      <ul>
-                        {{#each trailers}}
-                          
-                        {{/each}}
-                      </ul> 
-                      <div class="embed-responsive embed-responsive-1by1">
-                          
-                      <iframe class="embed-responsive-item" src="https://www.youtube.com/embed/ARyZpzqD6lA?start=42" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
-                      </div> 
-                  </div>
-                </div>
-                <div class="col-sm-6 card bg-warning">
-                  <div class="card-body text-center">
-                    <p class="card-text">My list!</p>
-        
-                      <ul>
-                        {{#each movies}}
-                          <li>
-                            <p>
-                              {{this.id}}. {{this.movie}}
-        
-                              <button data-movieid="{{this.id}}" class="delmovie">Delete</button>
-                            </p>
-                          </li>
-                        {{/each}}
-                      </ul> 
-        
-                      <h2>Add a Movie to Watch</h2>
-                      <form id="addmovie" class="button-size">
-                        <textarea type="text" name="movie"></textarea>
-                        <button type="submit">Save Movie!</button>
-                      </form>
-        
-                      <h2>Update a Movie</h2>
-                      <form id="updatemovie" class="button-size">
-                        <input type="text" name="id" placeholder="id">
-                        <textarea type="text" name="movie" placeholder="what do you want to update this movie title to?"></textarea>
-                        <button type="submit">Update Movie!</button>
-                      </form>
-                      
-                  </div>
-                </div>
-                {{!-- <div class="card bg-success">
-                  <div class="card-body text-center">
-                    <p class="card-text">Movie News</p>
-                      
-                  </div>
-                </div> --}}
-                <div class="col-sm-3  card bg-danger">
-                  <div class="card-body text-center">
-                    <p class="card-text">Showtimes</p>
-                      <form id="addzipcode" class="button-size">
-                        <textarea type="text" name="zipcode"></textarea>
-                        <button type="submit">Enter Zipcode</button>
-                      </form>
-                      <ul>
-                        {{#each movies}}
-                          
-                        {{/each}}
-                      </ul> 
-                  </div>
-                </div> 
-              </div>
-        
-              <div>
-                 <br>
-                  <div class="card bg-secondary">
-                      <div class="card-body text-center">
-                        <p class="card-text">Movie News</p>
-                      </div>
-                    </div> 
-               
-              </div>
-    <!-- Optional JavaScript -->
-    <!-- jQuery first, then Popper.js, then Bootstrap JS -->
-    
-    <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js" integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo" crossorigin="anonymous"></script>
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.3/umd/popper.min.js" integrity="sha384-ZMP7rVo3mIykV+2+9J3UJ46jBk0WLaUAdn689aCwoqbBJiSnjAK/l8WvCWPIPm49" crossorigin="anonymous"></script>
-    <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/js/bootstrap.min.js" integrity="sha384-ChfqqxuZUCnJSK3+MXmPNIyE6ZbWh2IMqE241rYiqJxyMiZ6OW/JmZQ5stwEULTy" crossorigin="anonymous"></script>
-    <script src="./view.js" type="text/javascript"></script>       
+            </div>
+          </form>
+        </li>
+        <span class="list-container">
+        </span>
+      </ul>   
+    </div>
+  </div>
+  <div class="col-sm-3 card bg-danger">
+    <div class="card-body text-center">  
+      <p class="card-text">Movie News</p>
+      <ul>
+        {{#each movies}}
+          
+        {{/each}}
+      </ul> 
+    </div>
+  </div> 
+</div>
+
+<div>
+  <br>
+  <div class="card bg-secondary">
+    <div class="card-body text-center">
+      <p class="card-text"></p>
+    </div>
+  </div> 
+</div>
