refactored main.handlebars and updated index.handlebars layout

--- a/views/index.handlebars
+++ b/views/index.handlebars
@@ -79,36 +79,16 @@
 </nav>
 <br>
 
-<div class="jumbotron jumbotron-fluid bg-secondary">
-  <div class="container">
-    <h1 class="display-4">Popular Current Movies</h1>
-    <ul>
-      {{#each posters}}
-        <img class="poster" src="{{this}}">
-      {{/each}}
-    </ul> 
-  </div>
-</div>
 
-<div class="card-deck">
-  <div class="col-sm-3  card bg-primary">
+
+
+<div class="container-fluid card-group">
+  <div class= "row">
+  <div class="col-sm-9 card bg-warning">
     <div class="card-body text-center">
-      <p class="card-text">Upcoming Trailer</p>
-      <ul>
-        {{#each trailers}}
-          
-        {{/each}}
-      </ul> 
-      <div class="embed-responsive embed-responsive-1by1">
-        {{!-- <iframe class="embed-responsive-item" src="https://www.youtube.com/embed/ARyZpzqD6lA?start=42" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe> --}}
-      </div> 
-    </div>
-  </div>
-  <div class="col-sm-6 card bg-warning">
-    <div class="card-body text-center">
-      <ul class="list-group todo-list">
+      <ul class="list-group list-list">
         <li class="list-group-item new-item">
-          <form id="todo-form">
+          <form id="list-form">
             <div class="container">
               <div class="row">
                 <div class="col-10">
@@ -126,7 +106,38 @@
       </ul>   
     </div>
   </div>
-  <div class="col-sm-3 card bg-danger">
+  
+  <div class="col-sm-3">
+  <div class="card bg-secondary">
+   <div id="demo" class="carousel slide" data-ride="carousel">
+
+      <!-- The slideshow -->
+      <div class="carousel-inner">
+        {{#each posters}}
+          {{#if @first}}
+            <div class="carousel-item active">
+          {{else}}
+            <div class="carousel-item">
+          {{/if}}
+          <img src="{{this}}">
+        </div>
+        {{/each}}
+      </div>
+
+      <!-- Left and right controls -->
+      <a class="carousel-control-prev" href="#demo" data-slide="prev">
+        <span class="carousel-control-prev-icon"></span>
+      </a>
+      <a class="carousel-control-next" href="#demo" data-slide="next">
+        <span class="carousel-control-next-icon"></span>
+      </a>
+
+    </div>
+
+
+</div>
+   
+   <div class="card bg-danger">
     <div class="card-body text-center">  
       <p class="card-text">Movie News</p>
       <ul>
@@ -136,6 +147,22 @@
       </ul> 
     </div>
   </div> 
+  <div class="card bg-primary">
+    <div class="card-body text-center">
+      <p class="card-text">Upcoming Trailer</p>
+      <ul>
+        {{#each trailers}}
+          
+        {{/each}}
+      </ul> 
+      <div class="embed-responsive embed-responsive-1by1">
+        {{!-- <iframe class="embed-responsive-item" src="https://www.youtube.com/embed/ARyZpzqD6lA?start=42" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe> --}}
+      </div> 
+      </div>
+    </div>
+  </div>
+ 
+</div>
 </div>
 
 <div>
