created partials within handlebars and index.handlebars updates

--- a/views/index.handlebars
+++ b/views/index.handlebars
@@ -80,7 +80,7 @@
 </nav>
 <br>
 
-<div class="container-fluid card-group">
+<div class="container-fluid card">
   <div class= "row">
   <div class="col-sm-9 card bg-warning">
     <div class="card-body text-center">
@@ -89,10 +89,10 @@
           <form id="list-form">
             <div class="container">
               <div class="row">
-                <div class="col-10">
+                <div class="col">
                   <input class="new-item form-control" placeholder="Add a movie" type="text" />
                 </div>
-                <div class="col-2">
+                <div class="col">
                   <button type="submit" class="btn-sm btn-success">Add Movie</button>
                 </div>
               </div>
