--- a/views/index.handlebars
+++ b/views/index.handlebars
@@ -8,67 +8,10 @@
     <ul class="navbar-nav mr-auto">
       <li class="nav-item">
         <!-- <a class="nav-link" href="#">Sign up</a> -->
-        <button type="button" class="btn btn-outline-success btn" data-toggle="modal" data-target="#myModal">Sign Up</button>
-
-        <!-- Modal -->
-        <div class="modal fade" id="myModal" role="dialog">
-          <div class="modal-dialog">
-          
-            <!-- Modal content-->
-            <div class="modal-content">
-              <div class="modal-header">
-                <button type="button" class="close" data-dismiss="modal">&times;</button>
-              </div>
-              <div class="modal-body">
-              <form id="signup" name="signup" method="post" action="api/signup">
-                <label for="email">Email Address</label>
-                <input class="text" name="email" type="email" />
-                <br><label for="firstname">Firstname</label>
-                <input name="firstname" type="text" />
-                <br><label for="lastname">Lastname</label>
-                <input name="lastname" type="text" />
-                <br><label for="password">Password</label>
-                <input name="password" type="password" />
-                <br><input id="signupbtn" class="btn btn-info" type="submit" value="Sign Up" />
-              </form>  
-              </div>
-              <div class="modal-footer">
-                <button type="button" class="btn btn-success btn-default" data-dismiss="modal">Close</button>
-              </div>
-            </div>
-            
-          </div>
-        </div>
+        <button type="button" class="btn btn-outline-success btn" onclick="location.href='/signup'">Sign Up</button>
       </li>
       <li class="nav-item">
-        <button type="button" class="btn btn-outline-success btn" data-toggle="modal" data-target="#myModal2">Sign in</button>
-
-        <!-- Modal -->
-        <div class="modal fade" id="myModal2" role="dialog">
-          <div class="modal-dialog">
-          
-            <!-- Modal content-->
-            <div class="modal-content">
-              <div class="modal-header">
-                <button type="button" class="close" data-dismiss="modal">&times;</button>  
-              </div>
-
-              <div class="modal-body">
-                <form id="signin" name="signin" method="post" action="signin">
-                  <label for="email">Email Address</label>
-                  <input class="text" name="email" type="text" />
-                  <br><label for="password">Password</label>
-                  <input name="password" type="password" />
-                  <br><input class="btn btn-info" type="submit" value="Sign In" />
-                </form>
-              </div>
-              <div class="modal-footer">
-                <button type="button" class="btn btn-success btn-default" data-dismiss="modal">Close</button>
-              </div>
-            </div>
-            
-          </div>
-        </div>
+        <button type="button" class="btn btn-outline-success btn" onclick="location.href='/signin'">Sign in</button>
       </li>
       
     </ul>
