--- a/public/styles/styles.css
+++ b/public/styles/styles.css
@@ -40,6 +40,11 @@ input.new-item:focus {
   background-color: black;
 }
 
+.carousel {
+  height: 354px;
+  text-align: center;
+}
+
 img{
   margin: 27px;
 }
