--- a/public/styles/styles.css
+++ b/public/styles/styles.css
@@ -13,7 +13,7 @@ h2 {
   margin: auto;
   width: 60%;
   margin-top: 10%;
-  border: 3px ridge blue;
+  border: 3px ridge red;
   border-radius: 12px;
   padding: 3%;
   text-align: -webkit-center;
