--- a/views/index.handlebars
+++ b/views/index.handlebars
@@ -13,6 +13,9 @@
       <li class="nav-item">
         <button type="button" class="btn btn-outline-success btn" onclick="location.href='/signin'">Sign in</button>
       </li>
+      <li class="nav-item">
+        <button class="btn btn-outline-success btn" style="width:auto;" id="logoutBtn">Logout</button>
+      </li>
       
     </ul>
     <form class="form-inline my-2 my-lg-0" action="/api/search" method="POST">
