--- a/views/index.handlebars
+++ b/views/index.handlebars
@@ -18,17 +18,19 @@
     </ul>
     <form class="form-inline my-2 my-lg-0" action="/api/search" method="POST">
       <input class="form-control mr-sm-2" name="query" type="search" placeholder="Search" aria-label="Search">
-      <button class="btn btn-outline-success my-2 my-sm-0" type="submit">Search</button>
+      <button class="btn btn-outline-success my-2 my-sm-0" name="search" type="submit">Search</button>
     </form>
   </div>
 </nav>
 <br>
-
 <div class="container-fluid card">
   <div class= "row">
   <div class="col-sm-9 card bg-warning">
     <div class="card-body text-center">
-      <ul class="list-group list-list">
+      {{> default }}
+      {{> search}}
+
+      {{!-- <ul class="list-group list-list">
         <li class="list-group-item new-item">
           <form id="list-form">
             <div class="container">
@@ -45,7 +47,7 @@
         </li>
         <span class="list-container">
         </span>
-      </ul>   
+      </ul>    --}}
     </div>
   </div>
   
