--- a/views/partials/search.handlebars
+++ b/views/partials/search.handlebars
@@ -1,8 +1,10 @@
+{{#each searchResults}}
 <li>
-        <h5>{{example.title}}</h5>
-        <p>Title: {{example.title}}</p>
-        <p>Year Released: {{example.year}}</p>
-        <p>Rating {{example.rating}}</p>
-        <p>Description {{example.description}}</p>
-        <button class="add-movie" data-id="{{example.id}}">ADD</button>
+        <img class="searchPoster" src="https://image.tmdb.org/t/p/w92/{{poster_path}}">
+        <h5>{{title}}</h5>
+        <p>Release Date: {{release_date}}</p>
+        <p>Description: {{overview}}</p>
+        <button class="select-movie" data-id="{{id}}">SELECT</button>
+        <button class="add-movie" data-id="{{id}}">ADD</button>
 </li>
+{{/each}}
