--- a/views/signup.handlebars
+++ b/views/signup.handlebars
@@ -2,10 +2,8 @@
   <form id="signup" name="signup" method="post" action="signup">
     <label for="email">Email Address</label>
     <input class="text" name="email" type="email" />
-    <br><label for="firstname">Firstname</label>
-    <input name="firstname" type="text" />
-    <br><label for="lastname">Lastname</label>
-    <input name="lastname" type="text" />
+    <br><label for="username">User Name</label>
+    <input name="username" type="text" />
     <br><label for="password">Password</label>
     <input name="password" type="password" />
     <br><input id="signupbtn" class="btn btn-info" type="submit" value="Sign Up" />
