--- a/views/index.handlebars
+++ b/views/index.handlebars
@@ -6,15 +6,18 @@
 
   <div class="collapse navbar-collapse" id="navbarSupportedContent">
     <ul class="navbar-nav mr-auto">
+      {{#unless authenticated}}
       <li class="nav-item">
         <button type="button" class="btn btn-outline-success btn" onclick="location.href='/signup'">Sign Up</button>
       </li>
       <li class="nav-item">
         <button type="button" class="btn btn-outline-success btn" onclick="location.href='/signin'">Sign In</button>
       </li>
+      {{else}}
       <li class="nav-item">
         <button type="button" class="btn btn-outline-success btn" onclick="location.href='/signout'">Sign Out</button>
       </li>
+      {{/unless}}
     </ul>
     <form class="form-inline my-2 my-lg-0" action="/api/search" method="POST">
       <input class="form-control mr-sm-2" name="query" type="search" placeholder="Search" aria-label="Search">
@@ -27,7 +30,7 @@
   <div class= "row">
   <div class="col-sm-9 card bg-warning">
     <div class="card-body text-center">
-      {{> default }}
+      {{> default}}
       {{> search}}
 
       {{!-- <ul class="list-group list-list">
