adding scroll updates and css updates

--- a/views/index.handlebars
+++ b/views/index.handlebars
@@ -25,11 +25,11 @@
 <br>
 <div class="container-fluid card">
   <div class= "row">
-  <div class="col-sm-9 card bg-warning">
+  <div class="col-sm-9 scroll card bg-warning">
     <div class="card-body text-center">
       {{> default }}
       {{> search}}
-
+      
       {{!-- <ul class="list-group list-list">
         <li class="list-group-item new-item">
           <form id="list-form">
