--- a/public/styles/styles.css
+++ b/public/styles/styles.css
@@ -55,3 +55,13 @@ input.new-item:focus {
 img{
   margin: 27px;
 }
+
+.scroll {
+   overflow-y: auto;
+   height: 700px;
+}
+
+.searchPoster {
+  width: 200px;
+  height: 200px;
+}
