--- a/views/index.handlebars
+++ b/views/index.handlebars
@@ -88,8 +88,8 @@
     <div class="card-body text-center">  
       <p class="card-text">Movie News</p>
       <ul>
-        {{#each movies}}
-          
+        {{#each newsResults}}
+          {{> news}}
         {{/each}}
       </ul> 
     </div>
@@ -98,9 +98,7 @@
     <div class="card-body text-center">
       <p class="card-text">Upcoming Trailer</p>
       <ul>
-        {{#each trailers}}
-          
-        {{/each}}
+
       </ul> 
       <div class="embed-responsive embed-responsive-1by1">
         {{!-- <iframe class="embed-responsive-item" src="https://www.youtube.com/embed/ARyZpzqD6lA?start=42" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe> --}}
