--- a/views/index.handlebars
+++ b/views/index.handlebars
@@ -42,6 +42,7 @@
   
   <div class="col-sm-3">
   <div class="card bg-secondary">
+    {{#unless searchResults}}
    <div id="demo" class="carousel slide" data-ride="carousel">
 
       <!-- The slideshow -->
@@ -69,6 +70,7 @@
 
 
 </div>
+{{else}}
    
    <div class="card news scroll2 bg-danger">
     <div class="card-body text-center">  
@@ -83,6 +85,7 @@
       </div>
     </div>
   </div> 
+  {{/unless}}
   {{!-- <div class="card bg-primary">
     <div class="card-body text-center">
       <p class="card-text">Upcoming Trailer</p>
