--- a/views/partials/search.handlebars
+++ b/views/partials/search.handlebars
@@ -1,12 +1,14 @@
 
 {{#each searchResults}}
-<p>
-        <img class="searchPoster" src="https://image.tmdb.org/t/p/w92/{{poster_path}}">
-        <h5>{{title}}</h5>
+<div class="innerCard2">
+
+        <img class="searchPoster" align="left" src="https://image.tmdb.org/t/p/w92/{{poster_path}}">
+        <p>
+        <h3>{{title}}</h3>
         <p>Release Date: {{release_date}}</p>
         <p>Description: {{overview}}</p>
         <button class="select-movie" data-id="{{id}}">SELECT</button>
         <button class="add-movie" data-id="{{id}}">ADD</button>
-</p>
+</p></div>
 <br>
 {{/each}}
