--- a/views/partials/search.handlebars
+++ b/views/partials/search.handlebars
@@ -7,7 +7,7 @@
         <h3>{{title}}</h3>
         <p>Release Date: {{release_date}}</p>
         <p>Description: {{overview}}</p>
-        <button class="select-movie" data-id="{{id}}">SELECT</button>
+        <button action="movie" class="select-movie" data-id="{{id}}">SELECT</button>
         <button class="add-movie" data-id="{{id}}">ADD</button>
 </p></div>
 <br>
