--- a/views/index.handlebars
+++ b/views/index.handlebars
@@ -15,11 +15,14 @@
       </li>
       {{else}}
       <li class="nav-item">
+        <button type="button" class="btn btn-outline-success btn" onclick="location.href='/list'">My List</button>
+      </li>
+      <li class="nav-item">
         <button type="button" class="btn btn-outline-success btn" onclick="location.href='/signout'">Sign Out {{email}}</button>
       </li>
       {{/unless}}
     </ul>
-    <form class="form-inline my-2 my-lg-0" action="/api/search" method="POST">
+    <form class="form-inline my-2 my-lg-0" action="/search" method="POST">
       <input class="form-control mr-sm-2" name="query" type="search" placeholder="Search" aria-label="Search">
       <button class="btn btn-outline-success my-2 my-sm-0" name="search" type="submit">Search</button>
     </form>
@@ -28,68 +31,68 @@
 <br>
 <div class="container-fluid card">
   <div class= "row">
-  <div class="col-sm-9 scroll card bg-warning">
-    <div class="card-body text-center">
-
+    <div class="col-sm-9 scroll card bg-warning">
+      <div class="card-body text-center">
+        {{#if searchResults}}
+          {{> search}}
+        {{else}}
+          {{#if listResults}}
+            {{> list}}
+          {{else}}
+            {{> default}}
+          {{/if}}
+        {{/if}}
+      </div>
+    </div>
+  <div class="col-sm-3">
+    <div class="card bg-secondary">
       {{#unless searchResults}}
-      {{> default}}
+        <div id="demo" class="carousel slide" data-ride="carousel">
+
+          <!-- The slideshow -->
+          <div class="carousel-inner">
+            {{#each posters}}
+              {{#if @first}}
+                <div class="carousel-item active">
+              {{else}}
+                <div class="carousel-item">
+              {{/if}}
+              <img class="carouselPoster" src="{{this}}">
+            </div>
+            {{/each}}
+          </div>
+
+          <!-- Left and right controls -->
+          <a class="carousel-control-prev" href="#demo" data-slide="prev">
+            <span class="carousel-control-prev-icon"></span>
+          </a>
+          <a class="carousel-control-next" href="#demo" data-slide="next">
+            <span class="carousel-control-next-icon"></span>
+          </a>
+
+        </div>
+      </div>
+
       {{else}}
-      {{> search}}
+
+      <div class="card news scroll2 bg-danger">
+        <div class="card-body text-center">  
+          {{!-- <p class="card-text">Movie News</p> --}}
+          <div class="innerCard">
+            <h4>Movie News</h4>
+          <ul>
+            {{#each newsResults}}
+              {{> news}}
+            {{/each}}
+          </ul> 
+          </div>
+        </div>
+      </div> 
+
       {{/unless}}
 
     </div>
   </div>
-  
-  <div class="col-sm-3">
-  <div class="card bg-secondary">
-    {{#unless searchResults}}
-   <div id="demo" class="carousel slide" data-ride="carousel">
-
-      <!-- The slideshow -->
-      <div class="carousel-inner">
-        {{#each posters}}
-          {{#if @first}}
-            <div class="carousel-item active">
-          {{else}}
-            <div class="carousel-item">
-          {{/if}}
-          <img src="{{this}}">
-        </div>
-        {{/each}}
-      </div>
-
-      <!-- Left and right controls -->
-      <a class="carousel-control-prev" href="#demo" data-slide="prev">
-        <span class="carousel-control-prev-icon"></span>
-      </a>
-      <a class="carousel-control-next" href="#demo" data-slide="next">
-        <span class="carousel-control-next-icon"></span>
-      </a>
-
-    </div>
-
-
-</div>
-{{else}}
-   
-   <div class="card news scroll2 bg-danger">
-    <div class="card-body text-center">  
-      {{!-- <p class="card-text">Movie News</p> --}}
-      <div class="innerCard">
-        <h4>Movie News</h4>
-      <ul>
-        {{#each newsResults}}
-          {{> news}}
-        {{/each}}
-      </ul> 
-      </div>
-    </div>
-  </div> 
-  {{/unless}}
-
-  </div>
- 
-</div>
 </div>
 
 <div>
