--- a/views/partials/list.handlebars
+++ b/views/partials/list.handlebars
@@ -1,4 +1,7 @@
+<h4 class="watched">My To-Watch List</h4>
+<form action="/list">
 {{#each listResults}}
+{{#unless watched}}
   <div class="innerCard2">
     <div class="row">
       <div class="col-auto">
@@ -10,7 +13,7 @@
         <div class="row">
           <button 
             class="mark-watched" 
-            data-id="{{id}}">
+            data-movieId="{{movieId}}">
             MARK WATCHED
           </button>
         </div>
@@ -22,4 +25,34 @@
     </div>
   </div>
   <br>
+{{/unless}}
 {{/each}}
+<h4 class="watched">My Watched List</h4>
+{{#each listResults}}
+{{#if watched}}
+  <div class="innerCard2">
+    <div class="row">
+      <div class="col-auto">
+        <div class="row">
+          {{#if poster}}
+            <img class="thumbPoster" align="left" src="https://image.tmdb.org/t/p/w92{{poster}}">
+          {{/if}}
+        </div>
+        <div class="row">
+          <button 
+            class="mark-watched" 
+            data-movieId="{{movieId}}">
+            MARK UNWATCHED
+          </button>
+        </div>
+      </div>
+      <div class="col">
+        <h3>{{title}}</h3>
+        <p><span class="year">({{year}})</span>{{overview}}</p>
+      </div>
+    </div>
+  </div>
+  <br>
+{{/if}}
+{{/each}}
+</form>
