--- a/views/partials/search.handlebars
+++ b/views/partials/search.handlebars
@@ -1,3 +1,4 @@
+<form action="/list">
 {{#each searchResults}}
   <div class="innerCard2">
     <div class="row">
@@ -27,3 +28,4 @@
   </div>
   <br>
 {{/each}}
+</form>
